[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/dummy_enemy/Covid_M.png" type="Texture" id=1]
[ext_resource path="res://sprites/dummy_enemy/Covid_S.png" type="Texture" id=2]
[ext_resource path="res://sprites/dummy_enemy/Covid.png" type="Texture" id=3]
[ext_resource path="res://enemies/dummy.gd" type="Script" id=4]
[ext_resource path="res://sprites/dummy_enemy/Dead_Covid.png" type="Texture" id=5]
[ext_resource path="res://sprites/dummy_enemy/Dead_Covid_M.png" type="Texture" id=6]
[ext_resource path="res://sprites/dummy_enemy/Dead_Covid_S.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "Death",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 370.293

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "Idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 100, 0 )
scale = Vector2( 1.00505, 11.5 )

[node name="Pos_1" type="Position2D" parent="."]
position = Vector2( -122.112, 29.5916 )

[node name="Pos_2" type="Position2D" parent="."]
position = Vector2( -121.154, -52.2091 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
